--- a/Bath_Butters_Oils.html
+++ b/Bath_Butters_Oils.html
@@ -10,11 +10,12 @@
     <title>Welcome to Starshine Botanicals / Bath Butters oils</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<script type="text/javascript" src="dist/js/jquery.smartCart.min.js"></script>
 
-
-
+<link href="dist/css/smart_cart.min.css" rel="stylesheet" type="text/css">
 
     <link href="/stylesheets/site.css" rel="stylesheet" />
+    
     <script src="/javascripts/site.js"></script>
 
 
@@ -32,7 +33,7 @@
   <a href = "4ozbodybutter.html" title="4ozbodybutter" target="_parent">
   <img src=" p/6.jpg" alt="0" width="250" height="300">
   </a>
-  <a href = "rosebathoil.html" title="rosebathoil" target="_parent">
+  <a href = "rosebathoil.html" title="rose bath oil" target="_parent">
   <img src=" p/9.jpg" alt="1" width="250" height="300">
   </a>
   <a href = "herbalBathSoak.html" title="herbalBathSoak" target="_parent">
