--- a/AllCandles.html
+++ b/AllCandles.html
@@ -10,11 +10,12 @@
     <title>Welcome to Starshine Botanicals / All AllCandles</title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<script type="text/javascript" src="dist/js/jquery.smartCart.min.js"></script>
 
-
-
+<link href="dist/css/smart_cart.min.css" rel="stylesheet" type="text/css">
 
     <link href="/stylesheets/site.css" rel="stylesheet" />
+    
     <script src="/javascripts/site.js"></script>
 
 
