--- a/ProductList.html
+++ b/ProductList.html
@@ -389,8 +389,8 @@
     <!-- Paypal required info, Please update based on your details -->
     <input name="business" value="queenofcups57+5@gmail.com" type="hidden">
     <input name="currency_code" value="USD" type="hidden">
-    <input name="return" value="http://www.yourdomain.com/yoursuccessurl" type="hidden">
-    <input name="cancel_return" value="http://www.yourdomain.com/yourcancelurl" type="hidden">
+    <input name="return" value="https://starshine-botanicals.tk/productreviews.html" type="hidden">
+    <input name="cancel_return" value="https://starshine-botanicals.tk/ProductList.html" type="hidden">
     <input name="cmd" value="_cart" type="hidden">
     <input name="upload" value="1" type="hidden">
 </form>
