--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,14 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <script type="text/javascript" src="dist/js/jquery.smartCart.min.js"></script>
-
+<link href="stylesheets/site.css" rel="stylesheet" />
 <link href="dist/css/smart_cart.min.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="s/s.css">
+<link rel="stylesheet" href="s/s-theme.css">
+<script src="s/s.js"></script>
 
-    <link href="/stylesheets/site.css" rel="stylesheet" />
-    
-    <script src="/javascripts/site.js"></script>
+
+    <script src="javascripts/site.js"></script>
 
 
 
@@ -100,7 +102,7 @@ Please include : url of item your inquiring  about, or wish to order. or any oth
 </div>
 </li>
 
-  
+
 <div class="cat">
 <li>
   <a href="AllCandles.html">
