--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
      i also accept payments through cash app, cc , and paypal.
   </p>
 <p>
+</br>
        <audio controls>
        <source src="audio/zen.mp3" type="audio/mpeg">
      </audio>
@@ -53,10 +54,10 @@
   Click one of the images below to find more info about my products.
 
   </p>
-  <br>
+</br>
   </li>
 
-<div class="demo" style="width: 33%; margin:auto; padding:auto;">
+<div class="demo" style="min-width: 260px;max-width: 50%; margin:auto; padding:auto;">
 
   <div class="col-md-4 col-sm-6" >
 
